fix: mobile overflow

--- a/src/index.scss
+++ b/src/index.scss
@@ -16,7 +16,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
   background-color: $background-main;
   overflow: hidden;
-
+  max-width: 100vw;
 }
 
 code {
